--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:h2:mem:ticket-db
+spring.h2.console.enabled=true
+server.port=8082
+spring.graphql.graphiql.enabled=true
+
 
